--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh:****.com/uie/jest-ajv.git"
+    "url": "https://github.com/americanexpress/jest-ajv.git"
   },
   "jest": {
     "preset": "one-amex-jest-preset"
