--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "ajv": "^4.11.5",
     "chalk": "^1.1.3",
-    "jest-matcher-utils": "^19.0.0"
+    "jest-matcher-utils": "^19.0.0",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "amex-jest-preset": "^3.0.0",
