--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "chalk": "^2.4.1",
-    "jest-matcher-utils": "^23.2.0"
+    "jest-matcher-utils": "^24.0.0"
   },
   "devDependencies": {
     "amex-jest-preset": "^5.0.0",
     "eslint": "^5.2.0",
-    "eslint-config-amex": "^7.1.1",
-    "jest": "^23.4.2"
+    "eslint-config-amex": "^9.0.0",
+    "jest": "^24.0.0"
+  },
+  "engines": {
+    "node": ">= 6"
   }
 }
