chore(commitlint): add commitlint

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "url": "https://github.com/americanexpress/jest-json-schema.git"
   },
   "jest": {
-    "preset": "amex-jest-preset"
+    "preset": "amex-jest-preset",
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/commitlint.config.js"
+    ]
   },
   "keywords": [
     "jest",
@@ -30,13 +33,22 @@
     "jest-matcher-utils": "^24.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "ajv-keywords": "^3.4.1",
     "amex-jest-preset": "^5.0.0",
     "eslint": "^5.2.0",
     "eslint-config-amex": "^9.0.0",
+    "husky": "^3.1.0",
     "jest": "^24.0.0"
   },
   "engines": {
     "node": ">= 6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
