chore(script): add git history test script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ node_js:
   - "12"
   - "10"
   - "8"
+before_install:
+  # Create a master branch for commitlint
+  # https://github.com/conventional-changelog/commitlint/issues/6
+  - git remote set-branches origin master && git fetch
 deploy:
   on:
     tags: true
