--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint ./ --ignore-path .gitignore --ext .js",
     "pretest": "npm run lint",
-    "test": "jest",
+    "test": "jest && npm run test:git-history",
+    "test:git-history": "commitlint --from origin/master --to HEAD",
     "test:lockfile": "lockfile-lint -p package-lock.json -t npm -a npm -o https: -c -i",
     "posttest": "npm run test:lockfile"
   },
