chore(main): switch over to main and add GitHub actions

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "lint": "eslint ./ --ignore-path .gitignore --ext .js",
     "pretest": "npm run lint",
-    "test": "jest && npm run test:git-history",
-    "test:git-history": "commitlint --from origin/master --to HEAD",
+    "test": "jest",
+    "test:git-history": "commitlint --from origin/main --to HEAD",
     "test:lockfile": "lockfile-lint -p package-lock.json -t npm -a npm -o https: -c -i",
-    "posttest": "npm run test:lockfile"
+    "posttest": "npm run test:lockfile && npm run test:git-history"
   },
   "repository": {
     "type": "git",
@@ -38,13 +38,20 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "ajv-keywords": "^3.4.1",
     "amex-jest-preset": "^6.1.0",
     "eslint": "^5.2.0",
     "eslint-config-amex": "^9.0.0",
     "husky": "^3.1.0",
     "jest": "^25.1.0",
-    "lockfile-lint": "^4.1.0"
+    "lockfile-lint": "^4.3.7",
+    "semantic-release": "^17.1.2"
   },
   "engines": {
     "node": ">= 6"
@@ -54,5 +61,29 @@
       "pre-commit": "npm test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      "@semantic-release/github"
+    ]
   }
 }
