--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '12.13.0', '12.x', '14.x' ]
+        node: [ '12.13.0', '12.x', '14.x', '16.x' ]
     name: Node ${{ matrix.node }}
     steps:
     - uses: actions/checkout@v2
