test(update): updated jest & eslint

--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "ajv-keywords": "^4.0.0",
     "amex-jest-preset": "^6.1.0",
-    "eslint": "^5.2.0",
-    "eslint-config-amex": "^9.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-amex": "^15.0.1",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
     "husky": "^3.1.0",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "lockfile-lint": "^4.3.7",
     "semantic-release": "^17.1.2"
   },
