--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "matcher",
     "test"
   ],
-  "author": "Jimmy King <jimmy.king@aexp.com> (https://github.com/10xLaCroixDrinker)",
+  "author": "Jamie King <jamie.king@aexp.com> (https://github.com/10xLaCroixDrinker)",
   "license": "Apache-2.0",
   "dependencies": {
     "ajv": "^8.8.2",
